Fix z-index problem in slider navigation

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ background a bit darker*/
     background-color: rgba(0, 0, 0, 0.4);
 }
 
+.slides-navigation{
+    z-index: 6;
+}
+
 /*Style applied to both navigation arrows*/
 .slides-navigation .prev,
 .slides-navigation .next {
@@ -29,4 +33,30 @@ css in bootstrap*/
     right: 20px;
     background-image: url('../icons/next.png');
 
+}
+
+/*Title part of slider*/
+.titleMessage{
+    position: absolute;
+    width: 100%;
+    height: 250px;
+    top: 50%;
+    z-index: 5;
+    text-align: center;
+    margin-top: -125px;
+}
+
+.titleMessage .heading p{
+    color: #fff;
+    text-shadow: 0px 2px 5px rgba(0,0,0,0.4);
+    font-weight: 100;
+    letter-spacing: 7px;
+}
+
+.titleMessage .heading .main {
+    font-size: 50px;
+}
+
+.titleMessage .heading .sub {
+    font-size: 25px;
 }
